Battery usage updated is not calculated and reported
Note that it doesnt stop the robots ATM. Somehow the data has to be sent  from the supervisor and onto the specific robot. The current tasks in its queue should then also be reauctioned and considered failed aswell???

Some other questions are also added to the README that we can look at later :=)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ controllers/**/build/
 worlds/.project4.wbproj
 *.wbproj
 *.wbproj
+worlds/.project4.wbproj
+worlds/project4.wbt
+worlds/project4.wbt
+*.wbt
