--- a/controllers/epuck_crown/Makefile
+++ b/controllers/epuck_crown/Makefile
@@ -65,6 +65,14 @@ USE_C_API = true
 ###
 ###-----------------------------------------------------------------------------
 
+# --- Project-specific build configuration ---
+
+# Compile both controller and pathfinding as C++
+CXX_SOURCES = epuck_crown.cpp pathfinding.cpp
+
+# Include paths for finding headers
+INCLUDE = -I"$(WEBOTS_HOME_PATH)/include" -I.
+
 ### Do not modify: this includes Webots global Makefile.include
 null :=
 space := $(null) $(null)
