moved shared functionality to controllers/common/ (pathinfinding, map, messages, task types, etc)

--- a/controllers/auct_super/Makefile
+++ b/controllers/auct_super/Makefile
@@ -68,13 +68,13 @@ USE_C_API = true
 # --- Project-specific build configuration ---
 
 # C++ source files for the supervisor controller
-CXX_SOURCES = auct_super.cc ../epuck_crown/pathfinding.cpp
+CXX_SOURCES = auct_super.cc ../common/pathfinding.cpp
 
 # Compilation flags (C++ standard, warnings, optimization)
 CFLAGS = -std=c++17 -Wall -Wextra -O2
 
 # Include paths for finding headers
-INCLUDE = -I"$(WEBOTS_HOME_PATH)/include" -I.
+INCLUDE = -I"$(WEBOTS_HOME_PATH)/include" -I. -I../common
 
 ### Do not modify: this includes Webots global Makefile.include
 null :=
