rename/move controllers from: 1. auct_super -> supervisor_cent 2. epuck_crown -> epuck_cent - includes changes to corresponding makefiles and webots world/proj config (new controllers set in scene tree) - also fixed webots world config's broken/incorrect/misaligned channel assignment per robot

--- a/controllers/supervisor_cent/Makefile
+++ b/controllers/supervisor_cent/Makefile
@@ -67,8 +67,11 @@ USE_C_API = true
 
 # --- Project-specific build configuration ---
 
-# Compile both controller and pathfinding as C++
-CXX_SOURCES = epuck_crown.cpp ../common/pathfinding.cpp
+# C++ source files for the supervisor controller
+CXX_SOURCES = supervisor_cent.cpp ../common/pathfinding.cpp
+
+# Compilation flags (C++ standard, warnings, optimization)
+CFLAGS = -std=c++17 -Wall -Wextra -O2
 
 # Include paths for finding headers
 INCLUDE = -I"$(WEBOTS_HOME_PATH)/include" -I. -I../common
